--- a/301_350.md
+++ b/301_350.md
@@ -642,7 +642,321 @@ Why are the other answers wrong?
 Therefore, Kinesis Data Streams with Kinesis Data Analytics is the most suitable solution.
 </details>
 
+<details>
+  <summary>Question 321</summary>
 
+What should a solutions architect do to ensure that all objects uploaded to an Amazon S3 bucket are encrypted?
+
+-   [ ] A. Update the bucket policy to deny if the PutObject does not have an s3:x-amz-acl header set.
+-   [ ] B. Update the bucket policy to deny if the PutObject does not have an s3:x-amz-acl header set to private.
+-   [ ] C. Update the bucket policy to deny if the PutObject does not have an aws:Secure Transport header set to true.
+-   [ ] D. Update the bucket policy to deny if the PutObject does not have an x-amz-server-side-encryption header set.
+</details>
+<details>
+  <summary>Answer</summary>
+
+-   [ ] D. Update the bucket policy to deny if the PutObject does not have an x-amz-server-side-encryption header set.
+
+Why these are the correct answers:
+
+D. Update the bucket policy to deny if the PutObject does not have an x-amz-server-side-encryption header set.
+
+-   [ ] The `x-amz-server-side-encryption` header is used to request server-side encryption when uploading objects to S3.
+-   [ ] Denying uploads that do not include this header ensures that all objects are encrypted.
+-   [ ] This is the most direct way to enforce encryption at the bucket level.
+
+Why are the other answers wrong?
+
+-   [ ] A and B. The `s3:x-amz-acl` header is related to access control lists (ACLs), not encryption.
+-   [ ] C. The `aws:SecureTransport` header is related to requiring secure transport (HTTPS), not server-side encryption of objects.
+
+Therefore, enforcing the `x-amz-server-side-encryption` header is the correct method to ensure all objects are encrypted.
+</details>
+<details>
+  <summary>Question 322</summary>
+
+A solutions architect is designing a multi-tier application for a company. The application's users upload images from a mobile device. The application generates a thumbnail of each image and returns a message to the user to confirm that the image was uploaded successfully. The thumbnail generation can take up to 60 seconds, but the company wants to provide a faster response time to its users to notify them that the original image was received. The solutions architect must design the application to asynchronously dispatch requests to the different application tiers. What should the solutions architect do to meet these requirements?
+
+-   [ ] A. Write a custom AWS Lambda function to generate the thumbnail and alert the user. Use the image upload process as an event source to invoke the Lambda function.
+-   [ ] B. Create an AWS Step Functions workflow. Configure Step Functions to handle the orchestration between the application tiers and alert the user when thumbnail generation is complete.
+-   [ ] C. Create an Amazon Simple Queue Service (Amazon SQS) message queue. As images are uploaded, place a message on the SQS queue for thumbnail generation. Alert the user through an application message that the image was received.
+-   [ ] D. Create Amazon Simple Notification Service (Amazon SNS) notification topics and subscriptions. Use one subscription with the application to generate the thumbnail after the image upload is complete. Use a second subscription to message the user's mobile app by way of a push notification after thumbnail generation is complete.
+</details>
+<details>
+  <summary>Answer</summary>
+
+-   [ ] C. Create an Amazon Simple Queue Service (Amazon SQS) message queue. As images are uploaded, place a message on the SQS queue for thumbnail generation. Alert the user through an application message that the image was received.
+
+Why these are the correct answers:
+
+C. Create an Amazon Simple Queue Service (Amazon SQS) message queue. As images are uploaded, place a message on the SQS queue for thumbnail generation. Alert the user through an application message that the image was received.
+
+-   [ ] Amazon SQS allows for decoupling the image upload process from the thumbnail generation process.
+-   [ ] The application can quickly acknowledge the image upload to the user and then asynchronously process the thumbnail generation.
+-   [ ] This approach provides a faster response time to the user while ensuring the thumbnail is generated.
+
+Why are the other answers wrong?
+
+-   [ ] A. Using Lambda directly coupled with the upload process does not provide asynchronous processing and may still delay the response to the user.
+-   [ ] B. AWS Step Functions is more suited for complex workflows, not just simple asynchronous processing of image uploads.
+-   [ ] D. Amazon SNS is for pub/sub messaging, not for queuing tasks. It doesn't guarantee message processing like SQS.
+
+Therefore, Amazon SQS is the most suitable service for asynchronous processing in this scenario.
+</details>
+<details>
+  <summary>Question 323</summary>
+
+A company's facility has badge readers at every entrance throughout the building. When badges are scanned, the readers send a message over HTTPS to indicate who attempted to access that particular entrance. A solutions architect must design a system to process these messages from the sensors. The solution must be highly available, and the results must be made available for the company's security team to analyze. Which system architecture should the solutions architect recommend?
+
+-   [ ] A. Launch an Amazon EC2 instance to serve as the HTTPS endpoint and to process the messages. Configure the EC2 instance to save the results to an Amazon S3 bucket.
+-   [ ] B. Create an HTTPS endpoint in Amazon API Gateway. Configure the API Gateway endpoint to invoke an AWS Lambda function to process the messages and save the results to an Amazon DynamoDB table.
+-   [ ] C. Use Amazon Route 53 to direct incoming sensor messages to an AWS Lambda function. Configure the Lambda function to process the messages and save the results to an Amazon DynamoDB table.
+-   [ ] D. Create a gateway VPC endpoint for Amazon S3. Configure a Site-to-Site VPN connection from the facility network to the VPC so that sensor data can be written directly to an S3 bucket by way of the VPC endpoint.
+</details>
+<details>
+  <summary>Answer</summary>
+
+-   [ ] B. Create an HTTPS endpoint in Amazon API Gateway. Configure the API Gateway endpoint to invoke an AWS Lambda function to process the messages and save the results to an Amazon DynamoDB table.
+
+Why these are the correct answers:
+
+B. Create an HTTPS endpoint in Amazon API Gateway. Configure the API Gateway endpoint to invoke an AWS Lambda function to process the messages and save the results to an Amazon DynamoDB table.
+
+-   [ ] Amazon API Gateway provides a scalable and secure HTTPS endpoint.
+-   [ ] AWS Lambda allows for serverless processing of the messages.
+-   [ ] Amazon DynamoDB is a highly available and scalable NoSQL database to store the results.
+-   [ ] This architecture is highly available and suitable for real-time processing and analysis.
+
+Why are the other answers wrong?
+
+-   [ ] A. Using a single EC2 instance introduces a single point of failure and is not as scalable or highly available as API Gateway and Lambda.
+-   [ ] C. Amazon Route 53 is a DNS service and cannot directly receive and process HTTPS requests.
+-   [ ] D. Using a VPC endpoint and Site-to-Site VPN is overly complex for this scenario and does not provide the processing capabilities needed.
+
+Therefore, API Gateway, Lambda, and DynamoDB provide the best architecture for this use case.
+</details>
+<details>
+  <summary>Question 324</summary>
+
+A company wants to implement a disaster recovery plan for its primary on-premises file storage volume. The file storage volume is mounted from an Internet Small Computer Systems Interface (iSCSI) device on a local storage server. The file storage volume holds hundreds of terabytes (TB) of data. The company wants to ensure that end users retain immediate access to all file types from the on-premises systems without experiencing latency. Which solution will meet these requirements with the LEAST amount of change to the company's existing infrastructure?
+
+-   [ ] A. Provision an Amazon S3 File Gateway as a virtual machine (VM) that is hosted on premises. Set the local cache to 10 TB. Modify existing applications to access the files through the NFS protocol. To recover from a disaster, provision an Amazon EC2 instance and mount the S3 bucket that contains the files.
+-   [ ] B. Provision an AWS Storage Gateway tape gateway. Use a data backup solution to back up all existing data to a virtual tape library. Configure the data backup solution to run nightly after the initial backup is complete. To recover from a disaster, provision an Amazon EC2 instance and restore the data to an Amazon Elastic Block Store (Amazon EBS) volume from the volumes in the virtual tape library.
+-   [ ] C. Provision an AWS Storage Gateway Volume Gateway cached volume. Set the local cache to 10 TB. Mount the Volume Gateway cached volume to the existing file server by using iSCSI, and copy all files to the storage volume. Configure scheduled snapshots of the storage volume. To recover from a disaster, restore a snapshot to an Amazon Elastic Block Store (Amazon EBS) volume and attach the EBS volume to an Amazon EC2 instance.
+-   [ ] D. Provision an AWS Storage Gateway Volume Gateway stored volume with the same amount of disk space as the existing file storage volume. Mount the Volume Gateway stored volume to the existing file server by using iSCSI, and copy all files to the storage volume. Configure scheduled snapshots of the storage volume. To recover from a disaster, restore a snapshot to an Amazon Elastic Block Store (Amazon EBS) volume and attach the EBS volume to an Amazon EC2 instance.
+</details>
+<details>
+  <summary>Answer</summary>
+
+-   [ ] D. Provision an AWS Storage Gateway Volume Gateway stored volume with the same amount of disk space as the existing file storage volume. Mount the Volume Gateway stored volume to the existing file server by using iSCSI, and copy all files to the storage volume. Configure scheduled snapshots of the storage volume. To recover from a disaster, restore a snapshot to an Amazon Elastic Block Store (Amazon EBS) volume and attach the EBS volume to an Amazon EC2 instance.
+
+Why these are the correct answers:
+
+D. Provision an AWS Storage Gateway Volume Gateway stored volume with the same amount of disk space as the existing file storage volume. Mount the Volume Gateway stored volume to the existing file server by using iSCSI, and copy all files to the storage volume. Configure scheduled snapshots of the storage volume. To recover from a disaster, restore a snapshot to an Amazon Elastic Block Store (Amazon EBS) volume and attach the EBS volume to an Amazon EC2 instance.
+
+-   [ ] Volume Gateway stored volumes store the entire dataset locally and provide low-latency access, meeting the requirement for immediate access without latency.
+-   [ ] Using iSCSI allows for minimal changes to the existing infrastructure.
+-   [ ] Snapshots provide a mechanism for disaster recovery by allowing restoration to an EBS volume in AWS.
+
+Why are the other answers wrong?
+
+-   [ ] A. S3 File Gateway uses NFS, requiring changes to the application, and the local cache may not be sufficient for immediate access to all files.
+-   [ ] B. Tape Gateway is for backup and archival, not for providing immediate access to files. Restoration from tape is time-consuming.
+-   [ ] C. Volume Gateway cached volumes only store a subset of data locally, which may not provide immediate access to all files.
+
+Therefore, Volume Gateway stored volumes provide the best solution for immediate access and minimal changes.
+</details>
+<details>
+  <summary>Question 325</summary>
+
+A company is hosting a web application from an Amazon S3 bucket. The application uses Amazon Cognito as an identity provider to authenticate users and return a JSON Web Token (JWT) that provides access to protected resources that are stored in another S3 bucket. Upon deployment of the application, users report errors and are unable to access the protected content. A solutions architect must resolve this issue by providing proper permissions so that users can access the protected content. Which solution meets these requirements?
+
+-   [ ] A. Update the Amazon Cognito identity pool to assume the proper IAM role for access to the protected content.
+-   [ ] B. Update the S3 ACL to allow the application to access the protected content.
+-   [ ] C. Redeploy the application to Amazon S3 to prevent eventually consistent reads in the S3 bucket from affecting the ability of users to access the protected content.
+-   [ ] D. Update the Amazon Cognito pool to use custom attribute mappings within the identity pool and grant users the proper permissions to access the protected content.
+</details>
+<details>
+  <summary>Answer</summary>
+
+-   [ ] A. Update the Amazon Cognito identity pool to assume the proper IAM role for access to the protected content.
+
+Why these are the correct answers:
+
+A. Update the Amazon Cognito identity pool to assume the proper IAM role for access to the protected content.
+
+-   [ ] Amazon Cognito identity pools provide AWS credentials to users so they can access AWS resources.
+-   [ ] IAM roles define the permissions for these users.
+-   [ ] Updating the identity pool to assume the correct IAM role grants users the necessary permissions to access the protected S3 content.
+
+Why are the other answers wrong?
+
+-   [ ] B. S3 ACLs are an older access control mechanism and are not as flexible or secure as IAM roles. They are not the recommended way to grant access to S3 resources in this scenario.
+-   [ ] C. Redeploying the application to S3 does not address the permission issue. Eventually consistent reads are a characteristic of S3 but are not the cause of the access problem.
+-   [ ] D. Custom attribute mappings in Cognito are for passing user attributes, not for granting AWS resource access permissions.
+
+Therefore, updating the Cognito identity pool with the correct IAM role is the appropriate solution.
+</details>
+<details>
+  <summary>Question 326</summary>
+
+An image hosting company uploads its large assets to Amazon S3 Standard buckets. The company uses multipart upload in parallel by using S3 APIs and overwrites if the same object is uploaded again. For the first 30 days after upload, the objects will be accessed frequently. The objects will be used less frequently after 30 days, but the access patterns for each object will be inconsistent. The company must optimize its S3 storage costs while maintaining high availability and resiliency of stored assets. Which combination of actions should a solutions architect recommend to meet these requirements? (Choose two.)
+
+-   [ ] A. Move assets to S3 Intelligent-Tiering after 30 days.
+-   [ ] B. Configure an S3 Lifecycle policy to clean up incomplete multipart uploads.
+-   [ ] C. Configure an S3 Lifecycle policy to clean up expired object delete markers.
+-   [ ] D. Move assets to S3 Standard-Infrequent Access (S3 Standard-IA) after 30 days.
+-   [ ] E. Move assets to S3 One Zone-Infrequent Access (S3 One Zone-IA) after 30 days.
+</details>
+<details>
+  <summary>Answer</summary>
+
+-   [ ] A. Move assets to S3 Intelligent-Tiering after 30 days.
+-   [ ] B. Configure an S3 Lifecycle policy to clean up incomplete multipart uploads.
+
+Why these are the correct answers:
+
+A. Move assets to S3 Intelligent-Tiering after 30 days.
+
+-   [ ] S3 Intelligent-Tiering automatically optimizes storage costs by moving data to the most cost-effective tier based on access patterns.
+-   [ ] It's suitable for data with inconsistent access patterns, ensuring cost savings while maintaining performance.
+
+B. Configure an S3 Lifecycle policy to clean up incomplete multipart uploads.
+
+-   [ ] Multipart uploads that are not completed can consume storage.
+-   [ ] Cleaning up these incomplete uploads helps to optimize storage costs.
+
+Why are the other answers wrong?
+
+-   [ ] C. Expired object delete markers are automatically cleaned up by S3 and do not require a lifecycle policy.
+-   [ ] D. S3 Standard-IA is suitable for less frequently accessed data but does not automatically optimize for changing access patterns like S3 Intelligent-Tiering.
+-   [ ] E. S3 One Zone-IA is cheaper but reduces availability and resiliency, which is not suitable for this company's requirements.
+
+Therefore, S3 Intelligent-Tiering and cleaning up incomplete multipart uploads are the best choices.
+</details>
+<details>
+  <summary>Question 327</summary>
+
+A solutions architect must secure a VPC network that hosts Amazon EC2 instances. The EC2 instances contain highly sensitive data and run in a private subnet. According to company policy, the EC2 instances that run in the VPC can access only approved third-party software repositories on the internet for software product updates that use the third party's URL. Other internet traffic must be blocked. Which solution meets these requirements?
+
+-   [ ] A. Update the route table for the private subnet to route the outbound traffic to an AWS Network Firewall firewall. Configure domain list rule groups.
+-   [ ] B. Set up an AWS WAF web ACL. Create a custom set of rules that filter traffic requests based on source and destination IP address range sets.
+-   [ ] C. Implement strict inbound security group rules. Configure an outbound rule that allows traffic only to the authorized software repositories on the internet by specifying the URLs.
+-   [ ] D. Configure an Application Load Balancer (ALB) in front of the EC2 instances. Direct all outbound traffic to the ALB. Use a URL-based rule listener in the ALB's target group for outbound access to the internet.
+</details>
+<details>
+  <summary>Answer</summary>
+
+-   [ ] A. Update the route table for the private subnet to route the outbound traffic to an AWS Network Firewall firewall. Configure domain list rule groups.
+
+Why these are the correct answers:
+
+A. Update the route table for the private subnet to route the outbound traffic to an AWS Network Firewall firewall. Configure domain list rule groups.
+
+-   [ ] AWS Network Firewall provides stateful inspection and centralized network traffic filtering.
+-   [ ] Domain list rule groups allow you to filter traffic based on fully qualified domain names (FQDNs), meeting the requirement to allow traffic only to specific software repositories.
+-   [ ] This solution provides robust security and control over outbound traffic.
+
+Why are the other answers wrong?
+
+-   [ ] B. AWS WAF is for protecting web applications from web exploits, not for controlling outbound traffic from EC2 instances based on URLs.
+-   [ ] C. Security groups are stateful but operate at the instance level and do not provide URL-based filtering for outbound traffic.
+-   [ ] D. Application Load Balancers are for distributing incoming application traffic and do not provide outbound traffic filtering based on URLs.
+
+Therefore, AWS Network Firewall with domain list rule groups is the most appropriate solution.
+</details>
+<details>
+  <summary>Question 328</summary>
+
+A company is hosting a three-tier ecommerce application in the AWS Cloud. The company hosts the website on Amazon S3 and integrates the website with an API that handles sales requests. The company hosts the API on three Amazon EC2 instances behind an Application Load Balancer (ALB). The API consists of static and dynamic front-end content along with backend workers that process sales requests asynchronously. The company is expecting a significant and sudden increase in the number of sales requests during events for the launch of new products. What should a solutions architect recommend to ensure that all the requests are processed successfully?
+
+-   [ ] A. Add an Amazon CloudFront distribution for the dynamic content. Increase the number of EC2 instances to handle the increase in traffic.
+-   [ ] B. Add an Amazon CloudFront distribution for the static content. Place the EC2 instances in an Auto Scaling group to launch new instances based on network traffic.
+-   [ ] C. Add an Amazon CloudFront distribution for the dynamic content. Add an Amazon ElastiCache instance in front of the ALB to reduce traffic for the API to handle.
+-   [ ] D. Add an Amazon CloudFront distribution for the static content. Add an Amazon Simple Queue Service (Amazon SQS) queue to receive requests from the website for later processing by the EC2 instances.
+</details>
+<details>
+  <summary>Answer</summary>
+
+-   [ ] D. Add an Amazon CloudFront distribution for the static content. Add an Amazon Simple Queue Service (Amazon SQS) queue to receive requests from the website for later processing by the EC2 instances.
+
+Why these are the correct answers:
+
+D. Add an Amazon CloudFront distribution for the static content. Add an Amazon Simple Queue Service (Amazon SQS) queue to receive requests from the website for later processing by the EC2 instances.
+
+-   [ ] Amazon CloudFront improves performance by caching static content closer to users, reducing the load on the API.
+-   [ ] Amazon SQS decouples the website from the API, allowing the API to process requests asynchronously and handle sudden increases in traffic.
+-   [ ] This ensures that requests are queued and processed successfully without overwhelming the API.
+
+Why are the other answers wrong?
+
+-   [ ] A. Caching dynamic content is more complex and may not be as effective as caching static content. Simply increasing EC2 instances may not handle sudden spikes efficiently.
+-   [ ] B. Auto Scaling helps but queuing requests is more effective for handling sudden spikes without losing data.
+-   [ ] C. ElastiCache is for caching frequently accessed data, not for queuing requests. Caching dynamic content may not be the primary solution.
+
+Therefore, using CloudFront for static content and SQS for queuing is the most effective solution.
+</details>
+<details>
+  <summary>Question 329</summary>
+
+A security audit reveals that Amazon EC2 instances are not being patched regularly. A solutions architect needs to provide a solution that will run regular security scans across a large fleet of EC2 instances. The solution should also patch the EC2 instances on a regular schedule and provide a report of each instance's patch status. Which solution will meet these requirements?
+
+-   [ ] A. Set up Amazon Macie to scan the EC2 instances for software vulnerabilities. Set up a cron job on each EC2 instance to patch the instance on a regular schedule.
+-   [ ] B. Turn on Amazon GuardDuty in the account. Configure GuardDuty to scan the EC2 instances for software vulnerabilities. Set up AWS Systems Manager Session Manager to patch the EC2 instances on a regular schedule.
+-   [ ] C. Set up Amazon Detective to scan the EC2 instances for software vulnerabilities. Set up an Amazon EventBridge scheduled rule to patch the EC2 instances on a regular schedule.
+-   [ ] D. Turn on Amazon Inspector in the account. Configure Amazon Inspector to scan the EC2 instances for software vulnerabilities. Set up AWS Systems Manager Patch Manager to patch the EC2 instances on a regular schedule.
+</details>
+<details>
+  <summary>Answer</summary>
+
+-   [ ] D. Turn on Amazon Inspector in the account. Configure Amazon Inspector to scan the EC2 instances for software vulnerabilities. Set up AWS Systems Manager Patch Manager to patch the EC2 instances on a regular schedule.
+
+Why these are the correct answers:
+
+D. Turn on Amazon Inspector in the account. Configure Amazon Inspector to scan the EC2 instances for software vulnerabilities. Set up AWS Systems Manager Patch Manager to patch the EC2 instances on a regular schedule.
+
+-   [ ] Amazon Inspector is designed to assess EC2 instances for vulnerabilities and security best practices.
+-   [ ] AWS Systems Manager Patch Manager automates the process of patching EC2 instances and provides reporting on patch compliance.
+-   [ ] This combination provides both vulnerability scanning and automated patching with reporting.
+
+Why are the other answers wrong?
+
+-   [ ] A. Amazon Macie discovers and protects sensitive data, not software vulnerabilities. Cron jobs require manual management and reporting.
+-   [ ] B. Amazon GuardDuty detects malicious activity, not software vulnerabilities. Session Manager is for interactive sessions, not automated patching.
+-   [ ] C. Amazon Detective analyzes security findings to identify root causes, not for vulnerability scanning or patching. EventBridge is for event-driven tasks, not patching.
+
+Therefore, Amazon Inspector and Systems Manager Patch Manager are the most appropriate services.
+</details>
+<details>
+  <summary>Question 330</summary>
+
+A company is planning to store data on Amazon RDS DB instances. The company must encrypt the data at rest. What should a solutions architect do to meet this requirement?
+
+-   [ ] A. Create a key in AWS Key Management Service (AWS KMS). Enable encryption for the DB instances.
+-   [ ] B. Create an encryption key. Store the key in AWS Secrets Manager. Use the key to encrypt the DB instances.
+-   [ ] C. Generate a certificate in AWS Certificate Manager (ACM). Enable SSL/TLS on the DB instances by using the certificate.
+-   [ ] D. Generate a certificate in AWS Identity and Access Management (IAM). Enable SSL/TLS on the DB instances by using the certificate.
+</details>
+<details>
+  <summary>Answer</summary>
+
+-   [ ] A. Create a key in AWS Key Management Service (AWS KMS). Enable encryption for the DB instances.
+
+Why these are the correct answers:
+
+A. Create a key in AWS Key Management Service (AWS KMS). Enable encryption for the DB instances.
+
+-   [ ] AWS KMS is the service for managing encryption keys.
+-   [ ] RDS supports encryption at rest using KMS keys.
+-   [ ] This is the standard and recommended way to encrypt data at rest in RDS.
+
+Why are the other answers wrong?
+
+-   [ ] B. AWS Secrets Manager is for storing secrets, not for encrypting RDS instances.
+-   [ ] C and D. AWS Certificate Manager and IAM certificates are for SSL/TLS, which encrypts data in transit, not at rest.
+
+Therefore, using AWS KMS to encrypt RDS instances is the correct solution.
+</details>
 
 
 
